--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "concurrently \"npm run express\" \"npm run next\"",
     "express": "node server.js",
     "next": "next"
-  },  
+  },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.3",
     "@mui/system": "^5.14.15",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "next": "14.0.0",
     "react": "^18.2.0",
