--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run express\" \"npm run next\"",
-    "express": "node server.js",
+    "dev": "npm run next",
     "next": "next"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -18,10 +19,12 @@
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "next": "14.0.0",
+    "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "swagger-ui": "^5.9.1",
+    "swagger-ui-react": "^5.9.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
